# travel-ai-agent-crew

./: .dockerignore  .gitignore  Dockerfile  FEATURES.md  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/helpers/: helper.py
app/models/: model.py
app/routers/: openai.py
app/services/: chat.py  crew.py  llm.py  serp.py
frontend/: README.md  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatDialog.css  ChatDialog.jsx  FlightResults.css  FlightResults.jsx  HotelResults.css  HotelResults.jsx  Itinerary.css  Itinerary.jsx  ItineraryChatTab.css  ItineraryChatTab.jsx  SearchForm.css  SearchForm.jsx  Tabs.css  Tabs.jsx
frontend/src/services/: api.js  api.ts
helpers/: helper.py
services/: crew.py  serp.py
